fix tr is too high

--- a/src/app/home/h-table3/h.table3.component.scss
+++ b/src/app/home/h-table3/h.table3.component.scss
@@ -16,8 +16,8 @@ thead {
 }
 
 tbody {
-  height: 200px;
-  overflow-y: auto;
+  height: auto;
+  // overflow-y: auto;
 }
 
 tr {
